src/App.css
section {
  background: #222;
  color: #fff;
  min-height: 200px;
  padding: 50px 20px;
  display: flex;
  align-items: center;
}

section h2 {
  font-weight: 300;
  margin: 0;
  transform: translate(0, 50px);
  opacity: 0;
}

section p {
  line-height: 150%;
  font-weight: 300;
  font-size: 18px;
  transform: translate(0, 50px);
  opacity: 0;
}

